Added App2 and added Apache 2 License header. Cleaned up comments.